--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:seed": "npx knex seed:run",
     "test": "SERVER_WALLET_DB_NAME=server_wallet_test npx jest --runInBand",
     "watch-server": "SERVER_WALLET_DB_NAME=server_wallet_development nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app/server.ts",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "start": "node lib/src/app/server.js"
   },
   "author": "",
   "license": "MIT",
