Relative path for npm start

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "SERVER_WALLET_DB_NAME=server_wallet_test npx jest --runInBand",
     "watch-server": "SERVER_WALLET_DB_NAME=server_wallet_development nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app/server.ts",
     "build": "npx tsc",
-    "start": "node lib/app/server.js"
+    "start": "node ./lib/app/server.js"
   },
   "author": "",
   "license": "MIT",
