--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^6.2.0",
     "fmg-core": "^0.5.6",
     "fmg-nitro-adjudicator": "^0.0.10",
     "knex": "^0.13.0",
