--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ganache-cli": "^6.3.0",
     "jest": "^24.0.6",
     "koa-bodyparser": "^4.2.1",
+    "magmo-devtools": "git+https://github.com/magmo/devtools.git#v0.1.8",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2",
     "truffle": "^5.0.0-beta.2",
