--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "db:seed": "npx knex seed:run",
     "test": "SERVER_WALLET_DB_NAME=server_wallet_test npx jest --runInBand",
     "watch-server": "SERVER_WALLET_DB_NAME=server_wallet_development nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app/server.ts",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "start": "node ./lib/app/server.js",
+    "prestart": "npm run db:rollback && npm run db:migrate && npm run db:seed",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^6.2.0",
+    "dotenv-expand": "^4.2.0",
     "fmg-core": "^0.5.6",
     "fmg-nitro-adjudicator": "^0.0.10",
     "knex": "^0.13.0",
     "koa": "^2.7.0",
     "koa-body": "^4.0.8",
     "koa-router": "^7.4.0",
+    "magmo-devtools": "git+https://github.com/magmo/devtools.git#v0.1.8",
     "objection": "^1.6.0",
     "pg": "^7.1.2"
   },
@@ -34,11 +40,9 @@
     "@types/koa-router": "^7.0.39",
     "@types/supertest": "^2.0.7",
     "babel-register": "^6.26.0",
-    "dotenv-expand": "^4.2.0",
     "ganache-cli": "^6.3.0",
     "jest": "^24.0.6",
     "koa-bodyparser": "^4.2.1",
-    "magmo-devtools": "git+https://github.com/magmo/devtools.git#v0.1.8",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2",
     "truffle": "^5.0.0-beta.2",
