--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,11 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2017",
-        "noImplicitAny": false,
-        "outDir": "./lib",
-        "sourceMap": true,
-        "resolveJsonModule": true
-    },
-    "include": [
-        "./src/**/*"
-    ],
-    "exclude": [
-        "./**/*.test.ts"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2017",
+    "noImplicitAny": false,
+    "outDir": "./lib",
+    "sourceMap": true,
+    "resolveJsonModule": true
+  },
+  "include": ["./src/**/*", "./**/*.test.ts"]
 }
