Update env example to allow environment-dependant ethers provider

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,14 @@ DEV_GANACHE_HOST=127.0.0.1
 DEV_GANACHE_PORT=8545
 DEV_GANACHE_NETWORK_ID=5777
 ENABLE_SOLC_OPTIMIZER=TRUE
+
+ROPSTEN_NETWORK_ID=3
+GANACHE_NETWORK_ID=5775
+TESTNET=ropsten
+INFURA_API_KEY=2972b45cf9444a6d8f8695f6bdbc672f
+INFURA_JSON_RPC_ENDPOINT=https://${TESTNET}.infura.io/v3/${INFURA_API_KEY}
+GANACHE_JSON_RPC_ENDPOINT=http://${process.env.DEV_GANACHE_HOST}:${process.env.DEV_GANACHE_PORT}
+
+
+JSON_RPC_ENDPOINT=${GANACHE_JSON_RPC_ENDPOINT}
+NETWORK_ID=${GANACHE_NETWORK_ID}
