--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "resolveJsonModule": true
   },
   "include": ["./src/**/*"],
-  "exclude": ["**/*.test.ts"]
+  "exclude": ["**/*.test.ts", "**/*test_data.ts"]
 }
