--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,9 @@
 */.env.production.local
 */.vscode/settings.json
 
-*/npm-debug.log*
-*/yarn-debug.log*
-*/yarn-error.log*
+
+**/*.log
 */.env
-*/lerna-debug.log*
-yarn-error.log
 .env
 build
 lib
