--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:seed": "npx knex seed:run",
     "test": "SERVER_WALLET_DB_NAME=server_wallet_test npx jest --runInBand",
     "watch-server": "SERVER_WALLET_DB_NAME=server_wallet_development nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app/server.ts",
-    "build": "npx tsc",
+    "build": "npx tsc && npx tsc knexfile.ts",
     "start": "node ./lib/app/server.js",
     "prestart": "npm run db:rollback && npm run db:migrate && npm run db:seed",
     "postinstall": "npm run build"
