--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build": "npx tsc && npx tsc knexfile.ts",
     "start": "node ./lib/app/server.js",
     "prestart": "npm run db:rollback && npm run db:migrate && npm run db:seed",
+    "prettier:check": "npx prettier --check 'src/**/*.{ts,tsx}'",
+    "prettier:write": "npx prettier --write 'src/**/*.{ts,tsx}'",
     "postinstall": "npm run build"
   },
   "author": "",
@@ -47,6 +49,7 @@
     "koa-bodyparser": "^4.2.1",
     "node-jq": "^1.5.0",
     "nodemon": "^1.18.10",
+    "prettier": "^1.17.0",
     "supertest": "^3.4.2",
     "truffle": "^5.0.0-beta.2",
     "truffle-hdwallet-provider": "^1.0.4",
