--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:migrate": "npx knex migrate:latest",
     "db:rollback": "npx knex migrate:rollback",
     "db:seed": "npx knex seed:run",
-    "test": "SERVER_WALLET_DB_NAME=server_wallet_test npx jest --runInBand",
+    "test": "yarn prettier:check && SERVER_WALLET_DB_NAME=server_wallet_test npx jest --runInBand",
     "watch-server": "SERVER_WALLET_DB_NAME=server_wallet_development nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/app/server.ts",
     "build": "npx tsc && npx tsc knexfile.ts",
     "start": "node ./lib/app/server.js",
